--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "TelegramBot",
   "version": "2.0.0",
   "description": "",
-  "main": "bot.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "telegraf": "^3.38.0",
     "telegraf-inline-menu": "^5.0.0"
   },
